@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More 'no_plan';
+use Test::More tests => 4;
 use Test::Builder::Tester;
 
 use lib 't';
@@ -21,7 +21,7 @@ SUBMIT_GOOD_FORM: {
     my $mech = Test::WWW::Mechanize->new();
     isa_ok( $mech,'Test::WWW::Mechanize' );
 
-    $mech->get( "$server_root/form.html" );
+    $mech->get_ok( "$server_root/form.html" );
     $mech->click_ok( 'big_button', 'Submit First Form' );
 }
 
