@@ -1,8 +1,8 @@
-#!perl
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More 'no_plan';
+use Test::More tests => 4;
 use Test::Builder::Tester;
 
 BEGIN {
@@ -20,7 +20,7 @@ SUBMIT_GOOD_FORM: {
     my $mech = Test::WWW::Mechanize->new();
     isa_ok( $mech,'Test::WWW::Mechanize' );
 
-    $mech->get( "$server_root/form.html" );
+    $mech->get_ok( "$server_root/form.html" );
     $mech->submit_form_ok( {form_number =>1}, 'Submit First Form' );
 }
 
