@@ -18,7 +18,8 @@ WWW::Mechanize, because it has use outside of the Test:: world.
 $mech->followable_links() now finds file: URLs, too.
 
 [INTERNALS]
-Most tests no longer use TestServer.pm class.
+Most tests no longer use TestServer.pm class.  All tests now run under
+-T and have plan counts.
 
 
 1.32    Wed May 11 10:12:25 CDT 2011
